--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container">
 				<div class="site-branding pull-left">
 					<div id="site-identity">
-						<h1 class="site-title"><a href="home-v1.html" rel="home"><img id="myLogo" alt="logo" src="images/logo2.png"></a></h1>
+						<h1 class="site-title"><a href="home-v1.html" rel="home"><img id="myLogo" alt="logo" src="images/logo2.png" ></a></h1>
 					</div>
 					<!-- #site-identity -->
 				</div>
@@ -199,7 +199,7 @@
 											</div>
 											<!-- .caption -->
 											<a href="#">
-														<img src="images/slider/slide-csf.png" alt="Slider" />
+														<img src="images/slider/slide-csf2.png" alt="Slider" />
 													</a>
 										</article>
 										<!-- article -->
