--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 											</div>
 											<!-- .caption -->
 											<a href="#">
-														<img src="images/slider/slide-csf2.png" alt="Slider" />
+														<img src="images/slider/slide-csf.png" alt="Slider" />
 													</a>
 										</article>
 										<!-- article -->
