--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
 											</div>
 											<!-- .caption -->
 											<a href="#">
-														<img src="images/slider/slide-csf.png" alt="Slider" />
+														<img id="changeImg" src="images/slider/slide-csf.png" alt="Slider" />
+														<img id="changeImgMobil" src="images/slider/slide-csf2.png" alt="Slider" />
+														<img id="changeImgMobil2" src="images/slider/slide-csf-mobil.png" alt="Slider" />
 													</a>
 										</article>
 										<!-- article -->
