--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<link rel="stylesheet" id="color" href="css/default.css">
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/lite-green.css"> -->
-	<link rel="stylesheet" type="text/css" href="css/colors/dark-green.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/colors/dark-green.css"> -->
 	
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/black.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/orange.css"> -->
-	<!-- <link rel="stylesheet" type="text/css" href="css/colors/brown.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/colors/csfBlueGreen.css">
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/lite-green.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/dark-purple.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/colors/cyan.css"> -->
@@ -102,7 +102,7 @@
 			<div class="container">
 				<div class="site-branding pull-left">
 					<div id="site-identity">
-						<h1 class="site-title"><a href="home-v1.html" rel="home"><img id="myLogo" alt="logo" src="images/logo2.png" ></a></h1>
+						<h1 class="site-title"><a href="home-v1.html" rel="home"><img id="myLogo" alt="logo" src="images/logo3.png" ></a></h1>
 					</div>
 					<!-- #site-identity -->
 				</div>
@@ -198,7 +198,7 @@
 											</div>
 											<!-- .caption -->
 											<a href="#">
-														<img id="changeImg" src="images/slider/slide-csf.png" alt="Slider" />
+														<img id="changeImg" src="images/slider/slide-csf-main.png" alt="Slider" />
 														<img id="changeImgMobil" src="images/slider/slide-csf2.png" alt="Slider" />
 														<img id="changeImgMobil2" src="images/slider/slide-csf-mobil.png" alt="Slider" />
 													</a>
@@ -359,115 +359,8 @@
 								</div>
 								<!-- .section-services  -->
 							</aside>
-							<!-- .section -->
+							
 			
-							<!-- .section -->
-							<!-- <aside class="section">
-										<div class="section-portfolio">
-											<div class="container">
-												<div class="section-title-wrap">
-													<p class="section-top-subtitle">Portfolio</p>
-													<h2 class="section-title">My Recent Work</h2>
-													<span class="divider"></span>
-												</div> 
-												<div class="portfolio-main-wrapper">
-													<nav class="portfolio-filter">
-														<ul>
-															<li><a class="active" href="#" data-filter="*"><span></span> All</a></li>
-															<li><a class="" href="#" data-filter=".web-design">Web Design</a></li>
-															<li><a class="" href="#" data-filter=".graphic-design">Graphic Design</a></li>
-															<li><a class="" href="#" data-filter=".photography">Photography</a></li>
-														</ul>
-													</nav>
-													<div id="portfolio" class="masonry-wrapper portfolio-container row-fluid wow fadeInUp">
-														<div class="portfolio-item  photography">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-1.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																<a  class="zoom-icon" data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-1.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-																</div>
-															</div>
-														</div>
-														<div class="portfolio-item  graphic-design">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-2.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																	<a class="zoom-icon" data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-2.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-																</div>
-															</div>
-														</div>
-														<div class="portfolio-item  photography">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-3.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																	<a class="zoom-icon" data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-3.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-																</div>
-															</div>
-														</div>
-														<div class="portfolio-item  web-design">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-4.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																	<a class="zoom-icon" data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-4.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-
-																</div>
-															</div>
-														</div>
-														<div class="portfolio-item  photography">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-5.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																	<a class="zoom-icon" data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-5.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-
-																</div>
-															</div>
-														</div>
-														<div class="portfolio-item  graphic-design">
-															<div class="item-inner-wrapper">
-																<img src="images/portfolio/portfolio-6.jpg" alt="Portfolio" class="portfolio-thumb">
-																<div class="overlay"></div>
-																	<a class="zoom-icon"  data-gal="prettyPhoto[product-gallery]" rel="bookmark" href="images/portfolio/portfolio-6.jpg"><i class="icon-focus"></i></a>
-																<div class="portfolio-content">
-																	<h3><a href="#" >Works Title</a></h3>
-																	<p>Web Design, Business, Photography</p>
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</aside> -->
-
-							<!-- <aside class="section section-call-to-action cta-boxed boxed-width-section minimal-padding dark-background">
-										<div class="call-to-action-inner-wrapper">
-											<div class="container">
-												<div class="call-to-action-content">
-													<div class="call-to-action-description">
-														<h2 class="section-title">Looking for an excelent business solution?</h2>
-													</div>
-													<div class="call-to-action-buttons">
-														<a href="#" class="custom-button button-curved custom-primary">Buy Now</a>
-													</div>
-												</div><
-											</div> 
-										</div> 
-									</aside> -->
 
 							<aside class="section testimonials-bg background-img overlay-enabled">
 								<div class="section-testimonial">
