--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 											<div class="col-grid-6">
 												<div class="featured-page-section">
 													<div class="section-title-wrap text-alignleft">
-														<p class="section-top-subtitle">We Are Safety</p>
+														<p class="section-top-subtitle">We Are IT Solutions</p>
 														<h2 class="section-title">We Have 25 Years Experience</h2>
 													</div>
 													<p>CSF Technologies is a full-scale provider of IT products and related services to the Federal Government. We
