Changed for wide screens

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 												<div class="cycle-caption text-alignleft">
 													<h4>TRUSTED IT SOLUTIONS.</h4>
 													<h3><a href="#">LEADING THE FUTURE.</a></h3>
-													<p>Quisque ut nisi. Sed fringilla et nibh. Ut varius tincidunt libero. Maecenas he nunc fringilla toma dermajhe
+													<p style="width:100%;">Quisque ut nisi. Sed fringilla et nibh. Ut varius tincidunt libero. Maecenas he <br> nunc fringilla toma dermajhe
 														kikeu tomra kakebolo na amadero</p>
 													<div class="slider-buttons">
 														<a class="custom-button" href="#">Learn More</a>
