--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Feb 11 2019 06:41:13 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Feb 11 2019 07:12:11 GMT+0000 (UTC)  -->
 <html data-wf-page="5c5655f8c3ddd35045e6edb4" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
       <div class="hero-left">
         <h1 class="heading-1">MOVING <span>YOU</span> FORWARD</h1>
         <h1 class="heading-6">WITH TECHNOLOGY.</h1>
-        <p class="subhead-1">Full-scale provider of IT products and related services to the Federal Government. </p>
+        <p class="subhead-1"><em class="italic-text"> Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed ddolor sit.</em></p>
         <div class="div-block"><a href="#" class="button w-button">LEARN MORE</a><a href="#" class="button btn2 w-button">ABOUT US</a></div>
       </div>
     </div>
@@ -74,9 +74,9 @@
       <div class="right-1">
         <div class="div-block-17">
           <div class="w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/8.png" srcset="images/8-p-500.png 500w, images/8.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 41vw, (max-width: 991px) 42vw, 21vw" data-w-id="28e72a38-fa0b-d355-a5d5-56c53423c486" alt="" class="image-36"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/4_1.png" srcset="images/4_1-p-500.png 500w, images/4_1.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 41vw, (max-width: 991px) 42vw, 21vw" data-w-id="28e72a38-fa0b-d355-a5d5-56c53423c486" alt="" class="image-36"></div>
             <div class="column-11 w-col w-col-2 w-col-small-2 w-col-tiny-2"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/6.png" srcset="images/6-p-500.png 500w, images/6.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 31vw, (max-width: 991px) 32vw, 16vw" data-w-id="d7dfc44f-053e-3ad8-84fe-b7670f1ef9ad" alt="" class="image-44"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/3.png" srcset="images/3-p-500.png 500w, images/3.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 31vw, (max-width: 991px) 32vw, 16vw" data-w-id="d7dfc44f-053e-3ad8-84fe-b7670f1ef9ad" alt="" class="image-44"></div>
             <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/5.png" srcset="images/5-p-500.png 500w, images/5.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 38vw, (max-width: 991px) 40vw, 20vw" data-w-id="e137e021-c285-a34c-df12-e84d40ada12c" alt="" class="image-40"></div>
             <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/9.png" srcset="images/9-p-500.png 500w, images/9.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 25vw, (max-width: 991px) 26vw, 13vw" data-w-id="1f70c1dc-43e7-cfdf-0bb2-7a3485a2568a" alt="" class="image-37"></div>
             <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/2.png" srcset="images/2-p-500.png 500w, images/2.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 21vw, (max-width: 991px) 22vw, 11vw" alt="" class="image-43"></div>
