--- a/gsa-8-a-stars-ii.html
+++ b/gsa-8-a-stars-ii.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Feb 11 2019 07:12:11 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Feb 11 2019 07:16:15 GMT+0000 (UTC)  -->
 <html data-wf-page="5c5e7875050ea38cd5a6ebe9" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -64,7 +64,7 @@
       <div id="w-node-62d30e2276d4-d5a6ebe9" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
         <div class="div-block-47"></div>
         <h2 class="heading-57">GSA 8(a) STARS II</h2>
-        <div class="text-block-9"><span class="text-span-2">Contract Name: GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5">Contract Number:</span> GS00Q17GWD2399<br>Constellations and Functional Areas: C1 FA2 and FA4<br>Contract Types: Fixed Price / Labor Hour / Time and Materials<br>Contractor DUNS Number: 128419095<br>GSA 8(a) STARS II website: <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a>Point of Contact: Mr. Curtis Freeman | Program Manager<br>Email: STARS2@csftechnologies.com<br>Phone: 888-495-7561 or 856-495-7561</div>
+        <div class="text-block-9"><span class="text-span-2"><strong>Contract Name:</strong> GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5"><strong>Contract Number:</strong></span> GS00Q17GWD2399<br><strong>Constellations and Functional Areas:</strong> C1 FA2 and FA4<br><strong>Contract Types:</strong> Fixed Price / Labor Hour / Time and Materials<br><strong>Contractor DUNS Number:</strong> 128419095<br><strong>GSA 8(a) STARS II website:</strong> <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a><strong>Point of Contact:</strong> Mr. Curtis Freeman | Program Manager<br><strong>Email:</strong> STARS2@csftechnologies.com<br><strong>Phone: </strong>888-495-7561 or 856-495-7561</div>
       </div>
       <div id="w-node-8dee4d566ed0-d5a6ebe9" class="div-block-51">
         <div class="w-layout-grid grid-22"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="100vw" id="w-node-402309beb9ff-d5a6ebe9" alt="" class="bottomimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-fed3b0e62d01-d5a6ebe9" alt="" class="bottomimg"><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="100vw" id="w-node-0aa4334ffe18-d5a6ebe9" alt="" class="bottomimg"></div>
