--- a/gsa-8-a-stars-ii.html
+++ b/gsa-8-a-stars-ii.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Feb 11 2019 07:16:15 GMT+0000 (UTC)  -->
-<html data-wf-page="5c5e7875050ea38cd5a6ebe9" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Tue Feb 12 2019 07:46:48 GMT+0000 (UTC)  -->
+<html data-wf-page="5c6275b0c8dd8b6bbf84d663" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>GSA 8(a) STARS II</title>
@@ -12,7 +12,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/csf-bda606.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic","Heebo:300,regular,500,700,800","Anton:regular"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic","Heebo:300,regular,500,700,800","Anton:regular","Roboto Condensed:300italic,regular,700","Raleway:300,regular,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -35,47 +35,39 @@
         <div class="icon-2 w-icon-nav-menu"></div>
       </div><a href="#" class="link fonticon"></a></div>
   </div>
-  <div class="section-14">
-    <div>
-      <h1 class="heading-51">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
+  <div class="section-15">
+    <div class="w-layout-grid grid-28">
+      <h1 id="w-node-8cdd71e45e12-bf84d663" class="heading-60">GSA 8(a) STARS II</h1>
     </div>
-    <div class="div-block-40">
-      <h1 class="heading-50">GSA 8(a) STARS II</h1>
-    </div>
+    <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
   </div>
   <div>
     <div class="w-layout-grid grid-12">
-      <div id="w-node-5d746e004e9b-d5a6ebe9" class="div-block-41">
-        <div class="w-layout-grid grid-13">
-          <div id="w-node-37d507e09e14-d5a6ebe9" class="div-block-42">
-            <h1 class="heading-52">Contracts</h1>
-          </div>
-          <div id="w-node-1063cad67298-d5a6ebe9" class="div-block-43">
-            <h4 class="heading-53">ITES-3S</h4>
-          </div>
-          <div id="w-node-0e59d6bb9f0a-d5a6ebe9">
-            <h4 class="heading-55">GSA 8(a) STARS II</h4>
-          </div>
-          <div id="w-node-f36d7bcfc49f-d5a6ebe9" class="div-block-44">
-            <h4 class="heading-54">DLA JETS</h4>
-          </div>
+      <div id="w-node-62d30e2276d4-bf84d663" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
+        <div class="div-block-47"></div>
+        <h2 class="heading-57">OUR GSA 8(a) STARS II CONTRACT</h2>
+        <div class="text-block-9"><span><strong>Contract Name:</strong> GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5"><strong>Contract Number:</strong></span> GS00Q17GWD2399<br><strong>Constellations and Functional Areas:</strong> C1 FA2 and FA4<br><strong>Contract Types:</strong> Fixed Price / Labor Hour / Time and Materials<br><strong>Contractor DUNS Number:</strong> 128419095<br><strong>GSA 8(a) STARS II website:</strong> <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a><strong>Point of Contact:</strong> Mr. Curtis Freeman | Program Manager<br><strong>Email:</strong> STARS2@csftechnologies.com<br><strong>Phone: </strong>888-495-7561 or 856-495-7561</div>
+      </div>
+      <div id="w-node-9887b419d510-bf84d663" class="div-block-58">
+        <div class="w-layout-grid grid-25">
+          <div id="w-node-d308dacecdd6-bf84d663" class="div-block-53">
+            <div class="text-block-10">FOR MORE INFORMATION ABOUT <br>THIS CONTRACT</div><a href="#" class="button-3 w-button">CONTACT US </a></div>
         </div>
       </div>
-      <div id="w-node-62d30e2276d4-d5a6ebe9" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
-        <div class="div-block-47"></div>
-        <h2 class="heading-57">GSA 8(a) STARS II</h2>
-        <div class="text-block-9"><span class="text-span-2"><strong>Contract Name:</strong> GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5"><strong>Contract Number:</strong></span> GS00Q17GWD2399<br><strong>Constellations and Functional Areas:</strong> C1 FA2 and FA4<br><strong>Contract Types:</strong> Fixed Price / Labor Hour / Time and Materials<br><strong>Contractor DUNS Number:</strong> 128419095<br><strong>GSA 8(a) STARS II website:</strong> <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a><strong>Point of Contact:</strong> Mr. Curtis Freeman | Program Manager<br><strong>Email:</strong> STARS2@csftechnologies.com<br><strong>Phone: </strong>888-495-7561 or 856-495-7561</div>
-      </div>
-      <div id="w-node-8dee4d566ed0-d5a6ebe9" class="div-block-51">
-        <div class="w-layout-grid grid-22"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="100vw" id="w-node-402309beb9ff-d5a6ebe9" alt="" class="bottomimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-fed3b0e62d01-d5a6ebe9" alt="" class="bottomimg"><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="100vw" id="w-node-0aa4334ffe18-d5a6ebe9" alt="" class="bottomimg"></div>
-      </div>
-      <div id="w-node-6051c0d8db01-d5a6ebe9" class="div-block-52">
-        <div class="w-layout-grid grid-24"></div>
-      </div>
-      <div id="w-node-9887b419d510-d5a6ebe9">
-        <div class="w-layout-grid grid-25">
-          <div id="w-node-d308dacecdd6-d5a6ebe9" data-w-id="2177431b-ce53-d339-7a0b-d308dacecdd6" style="opacity:0" class="div-block-53">
-            <div class="text-block-10">FOR MORE INFORMATION ABOUT <br>THIS CONTRACT</div><a href="#" class="button-3 w-button">CONTACT US </a></div>
+      <div id="w-node-04cb7af4e5ca-bf84d663" class="div-block-57">
+        <div class="w-layout-grid grid-11">
+          <div id="w-node-e779221e95b4-221e95b3" class="div-block-35">
+            <h2 class="heading-45">Contracts</h2>
+          </div>
+          <div id="w-node-e779221e95b7-221e95b3" class="div-block-36">
+            <h4 class="heading-46">ITES-3S</h4>
+          </div>
+          <div id="w-node-e779221e95ba-221e95b3" class="div-block-37">
+            <h4 class="heading-46">DLA JETS</h4>
+          </div>
+          <div id="w-node-e779221e95bd-221e95b3" class="div-block-38">
+            <h4 class="heading-46"><a href="gsa-8-a-stars-ii.html" class="link-8 w--current">GSA 8(a) STARS II</a></h4>
+          </div>
         </div>
       </div>
     </div>
