--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Feb 11 2019 07:16:15 GMT+0000 (UTC)  -->
-<html data-wf-page="5c5655f8c3ddd35045e6edb4" data-wf-site="5c5655f8c3ddd35697e6edb1">
+<!--  Last Published: Tue Feb 12 2019 07:46:48 GMT+0000 (UTC)  -->
+<html data-wf-page="5c6275b0c8dd8b141584d65b" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
   <title>CSF</title>
@@ -11,7 +11,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/csf-bda606.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic","Heebo:300,regular,500,700,800","Anton:regular"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic","Heebo:300,regular,500,700,800","Anton:regular","Roboto Condensed:300italic,regular,700","Raleway:300,regular,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -39,8 +39,32 @@
       <div class="hero-left">
         <h1 class="heading-1">MOVING <span>YOU</span> FORWARD</h1>
         <h1 class="heading-6">WITH TECHNOLOGY.</h1>
-        <p class="subhead-1"><em class="italic-text"> Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed ddolor sit.</em></p>
+        <p class="subhead-1"><strong><em class="italic-text">BUILD THE PARTNERSHIP YOU NEED TO SUCCEED WITH CSF.</em></strong></p>
         <div class="div-block"><a href="#" class="button w-button">LEARN MORE</a><a href="#" class="button btn2 w-button">ABOUT US</a></div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <div class="w-layout-grid grid-26">
+      <h1 id="w-node-a72e69bbe57c-1584d65b" class="heading-58">Technology Solutions That Make Running Your Business So Much Easier!</h1>
+      <div id="w-node-56f4d567341c-1584d65b" class="div-block-54"></div>
+      <div id="w-node-78b456d8ef7c-1584d65b" class="coldiv">
+        <div class="text-block-12 right"></div>
+        <h3 class="colheading"><strong class="bold-text-5">WE ARE A FULL SERVICE<br></strong><span class="text-span-6">PROVIDER OF IT PRODUCTS</span></h3>
+        <div class="text-block-11">CSF Technologies is a<strong> </strong>Full-Scale Provider of IT Products and Related Services to the Federal Government. Our technical experience and understanding of IT Infrastructure services and security allows us to provide the best value purchasing opportunities to our Federal agency customers.</div>
+      </div>
+      <div id="w-node-3c9a4472d512-1584d65b" class="coldiv">
+        <div class="text-block-12"></div>
+        <h3 class="colheading"><strong class="bold-text-6">WE ARE A PRIME CONTRACTOR<br>‍</strong><span class="text-span-8">AND SUBCONTRACTOR</span></h3>
+        <div class="text-block-11">We are a Prime Contractor<strong> </strong>and Subcontractor on GWACs, and IDIQs, designed to provide Information Technology products and services directly to federal agencies. We also service local government, educational institutions and commercial companies.</div>
+      </div>
+      <div id="w-node-0360cc414606-1584d65b" class="coldiv">
+        <div class="text-block-12 left"></div>
+        <h3 class="colheading"><strong class="bold-text-6">SERVICE-DISABLED<br>‍</strong><span>VETERAN-OWNED</span></h3>
+        <div class="text-block-11">CSF Technologies is a Service-Disabled Veteran-Owned Small Business (SDVOSB), Economically Disadvantaged HUBZone and 8(a) Certified Disadvantaged Small Business. We are ISO 9001:2015 Certified and all operations fall under our quality management system.</div>
+      </div>
+      <div id="w-node-9742eae3ffd7-1584d65b" class="div-block-55"><a href="#" class="button-4 w-button">LETS TALK</a>
+        <div class="div-block-56"></div>
       </div>
     </div>
   </div>
@@ -74,18 +98,18 @@
       <div class="right-1">
         <div class="div-block-17">
           <div class="w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/4_1.png" srcset="images/4_1-p-500.png 500w, images/4_1.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 41vw, (max-width: 991px) 42vw, 21vw" data-w-id="28e72a38-fa0b-d355-a5d5-56c53423c486" alt="" class="image-36"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/3.png" data-w-id="28e72a38-fa0b-d355-a5d5-56c53423c486" alt="" class="image-36"></div>
             <div class="column-11 w-col w-col-2 w-col-small-2 w-col-tiny-2"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/3.png" srcset="images/3-p-500.png 500w, images/3.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 31vw, (max-width: 991px) 32vw, 16vw" data-w-id="d7dfc44f-053e-3ad8-84fe-b7670f1ef9ad" alt="" class="image-44"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/5.png" srcset="images/5-p-500.png 500w, images/5.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 38vw, (max-width: 991px) 40vw, 20vw" data-w-id="e137e021-c285-a34c-df12-e84d40ada12c" alt="" class="image-40"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/9.png" srcset="images/9-p-500.png 500w, images/9.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 25vw, (max-width: 991px) 26vw, 13vw" data-w-id="1f70c1dc-43e7-cfdf-0bb2-7a3485a2568a" alt="" class="image-37"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/2.png" srcset="images/2-p-500.png 500w, images/2.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 21vw, (max-width: 991px) 22vw, 11vw" alt="" class="image-43"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/3_1.png" srcset="images/3_1-p-500.png 500w, images/3_1.png 570w" sizes="100vw" data-w-id="d7dfc44f-053e-3ad8-84fe-b7670f1ef9ad" alt="" class="image-44"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/5.png" srcset="images/5-p-500.png 500w, images/5.png 570w" sizes="100vw" data-w-id="e137e021-c285-a34c-df12-e84d40ada12c" alt="" class="image-40"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/9.png" srcset="images/9-p-500.png 500w, images/9.png 570w" sizes="100vw" data-w-id="1f70c1dc-43e7-cfdf-0bb2-7a3485a2568a" alt="" class="image-37"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/2.png" srcset="images/2-p-500.png 500w, images/2.png 570w" sizes="100vw" alt="" class="image-43"></div>
           </div>
           <div class="w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/Untitled-design-10.png" srcset="images/Untitled-design-10-p-500.png 500w, images/Untitled-design-10.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 570px, (max-width: 791px) 72vw, (max-width: 991px) 570px, 35vw" data-w-id="6349772a-4703-362b-a937-a3bbfe67acaf" alt="" class="image-41"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/4.png" srcset="images/4-p-500.png 500w, images/4.png 570w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 27vw, 14vw" data-w-id="196489d2-2635-7c67-0abe-8a6650b1b1f2" alt="" class="image-45"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/connect2.png" srcset="images/connect2-p-500.png 500w, images/connect2.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 43vw, (max-width: 991px) 45vw, 22vw" data-w-id="d86914e5-8a06-1cad-682f-49849c2761a1" alt="" class="image-39"></div>
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/1.png" srcset="images/1-p-500.png 500w, images/1.png 570w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 51vw, (max-width: 991px) 53vw, 26vw" data-w-id="ce58b099-0147-7e7d-0b25-a258e94a3eeb" alt="" class="image-42"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/Untitled-design-10.png" srcset="images/Untitled-design-10-p-500.png 500w, images/Untitled-design-10.png 570w" sizes="100vw" data-w-id="6349772a-4703-362b-a937-a3bbfe67acaf" alt="" class="image-41"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/4.png" srcset="images/4-p-500.png 500w, images/4.png 570w" sizes="100vw" data-w-id="196489d2-2635-7c67-0abe-8a6650b1b1f2" alt="" class="image-45"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/connect2.png" srcset="images/connect2-p-500.png 500w, images/connect2.png 570w" sizes="100vw" data-w-id="d86914e5-8a06-1cad-682f-49849c2761a1" alt="" class="image-39"></div>
+            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2"><img src="images/1.png" srcset="images/1-p-500.png 500w, images/1.png 570w" sizes="100vw" data-w-id="ce58b099-0147-7e7d-0b25-a258e94a3eeb" alt="" class="image-42"></div>
             <div class="column-12 w-col w-col-2 w-col-small-2 w-col-tiny-2"></div>
             <div class="column-13 w-col w-col-2 w-col-small-2 w-col-tiny-2"></div>
           </div>
@@ -97,8 +121,8 @@
   <div class="section-5">
     <div class="wrap-4 w-container">
       <div class="section3left">
-        <h1 class="heading-8">Looking for an excelent business solution ?</h1>
-        <p class="paragraph-5"><em class="italic-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation.</em></p><a href="#" class="button-2 w-button">KNOW MORE</a></div>
+        <h1 class="heading-8">Looking For the Best in Technology Solutions ?</h1>
+        <p class="paragraph-5"><em class="italic-text">The professionals at CSF have been in business over 10 years working with the biggest names in the industry. We are the full solution at the best price. Come find out why our clients love and trust us.</em></p><a href="#" class="button-2 w-button">GET STARTED TODAY</a></div>
     </div>
   </div>
   <div class="section-7">
@@ -109,7 +133,7 @@
             <div class="columns-3 w-row">
               <div class="colcontainer w-col w-col-3 w-col-medium-6">
                 <div data-w-id="e4c86571-2a9c-4269-40b7-61f8108abf63" class="colhover boxshadow">
-                  <div class="iconblock"><img src="images/2.png" srcset="images/2-p-500.png 500w, images/2.png 570w" sizes="(max-width: 479px) 98.140625px, 151px" alt="" class="image-17"></div>
+                  <div class="iconblock"><img src="images/3.png" alt="" class="image-17"></div>
                   <div class="coldiv">
                     <h3 class="colh3">Security/Cameras<br>Recording Technology<br></h3>
                     <div class="coltext">You may notice that a lot of the business ideas on this list have been growing in popularity recently.</div>
@@ -129,7 +153,7 @@
                 <div data-w-id="24ade729-bb77-f553-4876-43d69b2fd88d" class="colhover boxshadow">
                   <div class="iconblock"><img src="images/1.png" srcset="images/1-p-500.png 500w, images/1.png 570w" sizes="(max-width: 479px) 98.796875px, 152px" alt="" class="image-18"></div>
                   <div class="coldiv">
-                    <h3 class="colh3">Value Added Reseller</h3>
+                    <h3 class="colh3">Value<br>Added Reseller</h3>
                     <div class="coltext">You may notice that a lot of the business ideas on this list have been growing in popularity recently.</div>
                   </div>
                 </div>
@@ -138,7 +162,7 @@
                 <div data-w-id="b90d1413-0824-41f5-6013-7e72300e1f91" class="colhover boxshadow">
                   <div class="iconblock"><img src="images/Untitled-design-8.png" srcset="images/Untitled-design-8-p-500.png 500w, images/Untitled-design-8.png 570w" sizes="(max-width: 479px) 81.671875px, 125.6875px" alt="" class="image-19"></div>
                   <div class="coldiv">
-                    <h3 class="colh3">IT Personnel</h3>
+                    <h3 class="colh3">IT <br>Personnel</h3>
                     <div class="coltext">You may notice that a lot of the business ideas on this list have been growing in popularity recently.</div>
                   </div>
                 </div>
@@ -152,7 +176,7 @@
   <div class="brands-section">
     <div class="container w-container">
       <div class="w-layout-grid brands">
-        <h2 id="w-node-6bbd55f0e345-45e6edb4" class="heading-13">Powerful strategic partnerships with industry leading OEMs and suppliers.</h2><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 479px) 71vw, (max-width: 767px) 75vw, (max-width: 991px) 588.75px, 770.796875px" id="w-node-0c351d04dc8a-45e6edb4" alt="" class="brandsimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-97d3a1151d64-45e6edb4" alt="" class="brandsimg"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 71vw, (max-width: 767px) 75vw, (max-width: 991px) 588.75px, 770.796875px" id="w-node-a4130c309971-45e6edb4" alt="" class="brandsimg"><img src="images/logo-ibm-png--1920.png" srcset="images/logo-ibm-png--1920-p-500.png 500w, images/logo-ibm-png--1920-p-800.png 800w, images/logo-ibm-png--1920-p-1080.png 1080w, images/logo-ibm-png--1920-p-1600.png 1600w, images/logo-ibm-png--1920.png 1920w" sizes="(max-width: 479px) 71vw, (max-width: 767px) 75vw, (max-width: 991px) 588.75px, 770.796875px" id="w-node-289f301d4a51-45e6edb4" alt="" class="brandsimg"><img src="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png" srcset="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709-p-500.png 500w, images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png 709w" sizes="(max-width: 479px) 71vw, (max-width: 767px) 75vw, (max-width: 991px) 588.75px, 709px" id="w-node-5399a0ff758d-45e6edb4" alt="" class="brandsimg"></div>
+        <h2 id="w-node-6bbd55f0e345-1584d65b" class="heading-13">Powerful strategic partnerships with industry leading OEMs and suppliers.</h2><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 479px) 73vw, (max-width: 767px) 78vw, (max-width: 991px) 619.1875px, 846px" id="w-node-0c351d04dc8a-1584d65b" alt="" class="brandsimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-97d3a1151d64-1584d65b" alt="" class="brandsimg"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 73vw, (max-width: 767px) 78vw, (max-width: 991px) 619.1875px, 846px" id="w-node-a4130c309971-1584d65b" alt="" class="brandsimg"><img src="images/logo-ibm-png--1920.png" srcset="images/logo-ibm-png--1920-p-500.png 500w, images/logo-ibm-png--1920-p-800.png 800w, images/logo-ibm-png--1920-p-1080.png 1080w, images/logo-ibm-png--1920-p-1600.png 1600w, images/logo-ibm-png--1920.png 1920w" sizes="(max-width: 479px) 73vw, (max-width: 767px) 78vw, (max-width: 991px) 619.1875px, 846px" id="w-node-289f301d4a51-1584d65b" alt="" class="brandsimg"><img src="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png" srcset="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709-p-500.png 500w, images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png 709w" sizes="(max-width: 479px) 73vw, (max-width: 767px) 78vw, (max-width: 991px) 619.1875px, 709px" id="w-node-5399a0ff758d-1584d65b" alt="" class="brandsimg"></div>
     </div>
   </div>
   <div class="section-13">
