--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
   <div>
     <div class="w-layout-grid grid-26">
-      <h1 id="w-node-a72e69bbe57c-1584d65b" class="heading-58">Technology Solutions That Make Running Your Business So Much Easier!</h1>
+      <h1 id="w-node-a72e69bbe57c-1584d65b" class="heading-58">Technology Solutions That Makes Running Your Business So Much Easier!</h1>
       <div id="w-node-56f4d567341c-1584d65b" class="div-block-54"></div>
       <div id="w-node-78b456d8ef7c-1584d65b" class="coldiv">
         <div class="text-block-12 right"></div>
