--- a/contracts.html
+++ b/contracts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 12 2019 07:51:40 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 13 2019 08:33:42 GMT+0000 (UTC)  -->
 <html data-wf-page="5c6275b0c8dd8b7bcf84d660" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -30,13 +30,13 @@
             </a>
           </div>
           <nav class="w-dropdown-list"><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link">GSA 8(A) STARS II</a></nav>
-        </div><a href="#" class="nav-link w-nav-link">About</a><a href="#" class="nav-link w-nav-link">Contact</a></nav>
+        </div><a href="#" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
       <div class="menu-button w-nav-button">
         <div class="icon-2 w-icon-nav-menu"></div>
       </div><a href="#" class="link fonticon"></a></div>
   </div>
   <div class="section-10">
-    <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
+    <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1><img src="images/2_1.png" alt="" class="image-61">
     <div class="w-layout-grid grid-27">
       <h1 id="w-node-58a2b1ce54d4-b1ce54d0" class="heading-59">CONTRACTS</h1>
     </div>
@@ -78,7 +78,7 @@
         <div class="w-layout-grid grid-19"></div>
       </div>
       <div id="w-node-b306f69b4c78-cf84d660">
-        <div class="w-layout-grid grid-23"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 99vw, 80vw" id="w-node-70b3dd75c369-cf84d660" alt="" class="bottomimg"><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 479px) 99vw, (max-width: 1250px) 80vw, 1000px" id="w-node-7344d2074f54-cf84d660" alt="" class="bottomimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-cad0ab848f60-cf84d660" alt="" class="bottomimg"></div>
+        <div class="w-layout-grid grid-23"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 86vw, (max-width: 991px) 69vw, 76vw" id="w-node-70b3dd75c369-cf84d660" alt="" class="bottomimg"><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 479px) 86vw, (max-width: 991px) 69vw, (max-width: 1315px) 76vw, 1000px" id="w-node-7344d2074f54-cf84d660" alt="" class="bottomimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-cad0ab848f60-cf84d660" alt="" class="bottomimg"></div>
       </div>
     </div>
   </div>
