--- a/gsa-8-a-stars-ii.html
+++ b/gsa-8-a-stars-ii.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Feb 12 2019 07:51:40 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Feb 13 2019 08:33:42 GMT+0000 (UTC)  -->
 <html data-wf-page="5c6275b0c8dd8b6bbf84d663" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
             </a>
           </div>
           <nav class="w-dropdown-list"><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link w--current">GSA 8(A) STARS II</a></nav>
-        </div><a href="#" class="nav-link w-nav-link">About</a><a href="#" class="nav-link w-nav-link">Contact</a></nav>
+        </div><a href="#" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
       <div class="menu-button w-nav-button">
         <div class="icon-2 w-icon-nav-menu"></div>
       </div><a href="#" class="link fonticon"></a></div>
@@ -39,13 +39,12 @@
     <div class="w-layout-grid grid-28">
       <h1 id="w-node-8cdd71e45e12-bf84d663" class="heading-60">GSA 8(a) STARS II</h1>
     </div>
-    <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1>
-  </div>
+    <h1 class="heading-42">////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</h1><img src="images/Untitled-design-5.png" srcset="images/Untitled-design-5-p-500.png 500w, images/Untitled-design-5.png 570w" sizes="(max-width: 479px) 367px, (max-width: 767px) 417px, 570px" alt="" class="image-63"></div>
   <div>
     <div class="w-layout-grid grid-12">
       <div id="w-node-62d30e2276d4-bf84d663" data-w-id="1eefb01c-0a04-5ac0-08f9-62d30e2276d4" style="-webkit-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 317PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="div-block-46">
         <div class="div-block-47"></div>
-        <h2 class="heading-57">OUR GSA 8(a) STARS II CONTRACT</h2>
+        <h2 class="heading-57">GSA 8(a) STARS II</h2>
         <div class="text-block-9"><span><strong>Contract Name:</strong> GSA 8(a) STARS II Government-Wide Acquisition Contract</span> <span class="text-span-2">(GWAC)</span><br><span class="text-span-5"><strong>Contract Number:</strong></span> GS00Q17GWD2399<br><strong>Constellations and Functional Areas:</strong> C1 FA2 and FA4<br><strong>Contract Types:</strong> Fixed Price / Labor Hour / Time and Materials<br><strong>Contractor DUNS Number:</strong> 128419095<br><strong>GSA 8(a) STARS II website:</strong> <a href="http://www.gsa.gov/8astars2">www.gsa.gov/8astars2<br>‍</a><strong>Point of Contact:</strong> Mr. Curtis Freeman | Program Manager<br><strong>Email:</strong> STARS2@csftechnologies.com<br><strong>Phone: </strong>888-495-7561 or 856-495-7561</div>
       </div>
       <div id="w-node-9887b419d510-bf84d663" class="div-block-58">
