--- a/gsa-8-a-stars-ii.html
+++ b/gsa-8-a-stars-ii.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 13 2019 08:33:42 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Feb 14 2019 07:51:44 GMT+0000 (UTC)  -->
 <html data-wf-page="5c6275b0c8dd8b6bbf84d663" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" class="nav w-nav">
     <div class="nav-container w-container"><a href="#" class="logo w-nav-brand"><img src="images/logo2.png" width="122" alt="" class="image csflogo"></a>
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Home</a><a href="#" class="nav-link w-nav-link">Services</a>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Home</a><a href="services.html" class="nav-link w-nav-link">Services</a>
         <div data-delay="0" data-hover="1" class="w-dropdown">
           <div class="nav-link w-dropdown-toggle">
             <a href="contracts.html" class="link-block w-inline-block">
@@ -29,11 +29,11 @@
               <div class="w-icon-dropdown-toggle"></div>
             </a>
           </div>
-          <nav class="w-dropdown-list"><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link w--current">GSA 8(A) STARS II</a></nav>
-        </div><a href="#" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
+          <nav class="w-dropdown-list"><a href="contracts.html" class="dropdown-link w-dropdown-link">ALL</a><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link w--current">GSA 8(A) STARS II</a></nav>
+        </div><a href="about.html" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
       <div class="menu-button w-nav-button">
         <div class="icon-2 w-icon-nav-menu"></div>
-      </div><a href="#" class="link fonticon"></a></div>
+      </div><a href="https://www.linkedin.com/company/csf-technologies-inc/" target="_blank" class="link fonticon"></a></div>
   </div>
   <div class="section-15">
     <div class="w-layout-grid grid-28">
@@ -50,7 +50,7 @@
       <div id="w-node-9887b419d510-bf84d663" class="div-block-58">
         <div class="w-layout-grid grid-25">
           <div id="w-node-d308dacecdd6-bf84d663" class="div-block-53">
-            <div class="text-block-10">FOR MORE INFORMATION ABOUT <br>THIS CONTRACT</div><a href="#" class="button-3 w-button">CONTACT US </a></div>
+            <div class="text-block-10">FOR MORE INFORMATION ABOUT <br>THIS CONTRACT</div><a href="contact.html" class="button-3 w-button">CONTACT US </a></div>
         </div>
       </div>
       <div id="w-node-04cb7af4e5ca-bf84d663" class="div-block-57">
@@ -78,6 +78,32 @@
   <div class="footer-bottom">
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
+    </div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+  <div class="csfmainfooter">
+    <div class="w-layout-grid grid-38">
+      <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
+        <h2 class="heading-67">Certifications </h2>
+        <div class="footertext2">Certified Service Disabled Veteran Owned Small Business (SDVOSB)</div>
+        <div class="footertext2">SBA Certified 8(a) Small Busines</div>
+        <div class="footertext2">SBA Certified HUBZone Business</div>
+        <div class="footertext2">Certified Small Business Enterprise New Jersey (SBE)</div>
+        <div class="footertext2">Certified Small Minority Business Enterprise New Jersey (MBE)</div>
+      </div>
+      <div id="w-node-dd2ccab0849a-cab0848b" class="div-block-67">
+        <h2 class="heading-67">About Us</h2>
+        <div class="text-block-17"><span class="text-span-12"></span> (888)-495-7561</div>
+        <div class="text-block-17"><span class="text-span-12"> </span><a href="mailto:info@csftechnologies.com" class="link-10">info@csftechnologies.com</a></div>
+        <div class="text-block-17 adr"><span class="span13"></span> 3251 Progress Drive, Orlando FL 32826</div>
+        <h3 class="heading-68">Stay Connected! <span class="text-span-13"></span></h3>
+      </div>
+      <div id="w-node-dd2ccab084ae-cab0848b" class="div-block-67">
+        <h2 class="heading-67">Solutions</h2>
+        <div class="footertext2">Home<br>Services<br>About<br>Contracts<br>Contact Us</div>
+      </div>
+      <div id="w-node-dd2ccab084af-cab0848b" class="div-block-66"></div>
+      <h4 id="w-node-dd2ccab084b0-cab0848b" class="heading-66">© 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologie</a>. All rights reserved.</h4>
+      <div id="w-node-326bd5e350c5-cab0848b" class="div-block-75"><img src="images/logo2.png" alt="" class="image-72"></div>
     </div>
   </div>
   <script src="https://d1tdp7z6w94jbb.cloudfront.net/js/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
