--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Feb 13 2019 08:33:42 GMT+0000 (UTC)  -->
+<!--  Last Published: Thu Feb 14 2019 07:51:44 GMT+0000 (UTC)  -->
 <html data-wf-page="5c6275b0c8dd8b141584d65b" data-wf-site="5c5655f8c3ddd35697e6edb1">
 <head>
   <meta charset="utf-8">
@@ -20,7 +20,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" class="nav w-nav">
     <div class="nav-container w-container"><a href="#" class="logo w-nav-brand"><img src="images/logo2.png" width="122" alt="" class="image csflogo"></a>
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link w--current">Home</a><a href="#" class="nav-link w-nav-link">Services</a>
+      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link w--current">Home</a><a href="services.html" class="nav-link w-nav-link">Services</a>
         <div data-delay="0" data-hover="1" class="w-dropdown">
           <div class="nav-link w-dropdown-toggle">
             <a href="contracts.html" class="link-block w-inline-block">
@@ -28,11 +28,11 @@
               <div class="w-icon-dropdown-toggle"></div>
             </a>
           </div>
-          <nav class="w-dropdown-list"><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link">GSA 8(A) STARS II</a></nav>
-        </div><a href="#" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
+          <nav class="w-dropdown-list"><a href="contracts.html" class="dropdown-link w-dropdown-link">ALL</a><a href="gsa-8-a-stars-ii.html" class="dropdown-link w-dropdown-link">GSA 8(A) STARS II</a></nav>
+        </div><a href="about.html" class="nav-link w-nav-link">About</a><a href="contact.html" class="nav-link w-nav-link">Contact</a></nav>
       <div class="menu-button w-nav-button">
         <div class="icon-2 w-icon-nav-menu"></div>
-      </div><a href="#" class="link fonticon"></a></div>
+      </div><a href="https://www.linkedin.com/company/csf-technologies-inc/" target="_blank" class="link fonticon"></a></div>
   </div>
   <div class="hero-section">
     <div class="hero-wrap">
@@ -40,7 +40,7 @@
         <h1 class="heading-1">MOVING <span>YOU</span> FORWARD</h1>
         <h1 class="heading-6">WITH TECHNOLOGY.</h1>
         <p class="subhead-1"><strong><em class="italic-text">BUILD THE PARTNERSHIP YOU NEED TO SUCCEED WITH CSF.</em></strong></p>
-        <div class="div-block"><a href="#" class="button w-button">LEARN MORE</a><a href="#" class="button btn2 w-button">ABOUT US</a></div>
+        <div class="div-block"><a href="services.html" class="button w-button">LEARN MORE</a><a href="about.html" class="button btn2 w-button">ABOUT US</a></div>
       </div>
     </div>
   </div>
@@ -59,9 +59,9 @@
               <h3 class="colheading"><strong class="bold-text-6">A Prime Contractor<br></strong><span class="text-span-8"></span></h3>
               <p class="paragraph-2"><strong>We are a Prime Contractor </strong>and Subcontractor on GWACs, and IDIQs, designed to provide Information Technology products and services directly tofederal agencies. We also service local government, educational institutions and commercial companies.</p>
             </div>
-            <div id="w-node-00fff479e129-1584d65b" class="div-block-59 right">
-              <div class="iconblock">
-                <div class="iconcircle right"></div>
+            <div id="w-node-00fff479e129-1584d65b" data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e129" class="div-block-59 right">
+              <div data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e12a" class="iconblock">
+                <div data-w-id="f47f5d1f-0880-db0c-b7f6-00fff479e12b" class="iconcircle right"></div>
               </div>
               <h3 class="colheading"><span class="text-span-9"><strong class="bold-text-6">Veteran-owned</strong></span><strong class="bold-text-6"><br></strong></h3>
               <p class="paragraph-2"><strong>CSF Technologies</strong> is a Service-Disabled Veteran-Owned Small Business (SDVOSB), Economically Disadvantaged HUBZone and 8(a) Certified Disadvantaged Small Business. We are ISO 9001:2015 Certified and all operations fall under our quality management system.</p>
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="w-layout-grid grid-35">
-      <div id="w-node-b60bfc14524b-1584d65b" class="div-block-60"><a href="#" class="button-5 w-button">LETS TALK</a>
+      <div id="w-node-b60bfc14524b-1584d65b" class="div-block-60"><a href="contact.html" class="button-5 w-button">LETS TALK</a>
         <div class="div-block-61"></div>
       </div>
     </div>
@@ -129,7 +129,7 @@
     <div class="wrap-4 w-container">
       <div class="section3left">
         <h1 class="heading-8">Looking For the Best in Technology Solutions ?</h1>
-        <p class="paragraph-5"><em class="italic-text">The professionals at CSF have been in business over 10 years working with the biggest names in the industry. We are the full solution at the best price. Come find out why our clients love and trust us.</em></p><a href="#" class="button-2 w-button">CONTACT US</a></div>
+        <p class="paragraph-5"><em class="italic-text">The professionals at CSF have been in business over 10 years working with the biggest names in the industry. We are the full solution at the best price. Come find out why our clients love and trust us.</em></p><a href="contact.html" class="button-2 w-button">CONTACT US</a></div>
     </div>
   </div>
   <div class="section-7">
@@ -183,17 +183,43 @@
   <div class="brands-section">
     <div class="container w-container">
       <div class="w-layout-grid brands">
-        <h2 id="w-node-6bbd55f0e345-1584d65b" class="heading-13">Powerful strategic partnerships with industry leading OEMs and suppliers.</h2><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 479px) 62vw, (max-width: 767px) 67vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-0c351d04dc8a-1584d65b" alt="" class="brandsimg"><img src="images/HubZoneCertified2-300x180.png" id="w-node-97d3a1151d64-1584d65b" alt="" class="brandsimg"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 62vw, (max-width: 767px) 67vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-a4130c309971-1584d65b" alt="" class="brandsimg"><img src="images/logo-ibm-png--1920.png" srcset="images/logo-ibm-png--1920-p-500.png 500w, images/logo-ibm-png--1920-p-800.png 800w, images/logo-ibm-png--1920-p-1080.png 1080w, images/logo-ibm-png--1920-p-1600.png 1600w, images/logo-ibm-png--1920.png 1920w" sizes="(max-width: 479px) 62vw, (max-width: 767px) 67vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-289f301d4a51-1584d65b" alt="" class="brandsimg"><img src="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png" srcset="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709-p-500.png 500w, images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png 709w" sizes="(max-width: 479px) 62vw, (max-width: 767px) 67vw, (max-width: 991px) 529.75px, 709px" id="w-node-5399a0ff758d-1584d65b" alt="" class="brandsimg"></div>
+        <h2 id="w-node-6eca273d53a3-273d53a0" class="heading-13">Powerful strategic partnerships with industry leading OEMs and suppliers.</h2><img src="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png" srcset="images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709-p-500.png 500w, images/dell-logo-png-free-vector-dell-logo-091832-dell-logo-png-709.png 709w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 59vw, (max-width: 991px) 529.75px, 709px" id="w-node-6eca273d53a5-273d53a0" alt="" class="brandsimg first"><img src="images/HubZoneCertified2-300x180.png" id="w-node-6eca273d53a6-273d53a0" alt="" class="brandsimg"><img src="images/VOSB-LOGO.png" srcset="images/VOSB-LOGO-p-500.png 500w, images/VOSB-LOGO.png 863w" sizes="(max-width: 479px) 75vw, (max-width: 767px) 59vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-6eca273d53a7-273d53a0" alt="" class="brandsimg"><img src="images/logo-ibm-png--1920.png" srcset="images/logo-ibm-png--1920-p-500.png 500w, images/logo-ibm-png--1920-p-800.png 800w, images/logo-ibm-png--1920-p-1080.png 1080w, images/logo-ibm-png--1920-p-1600.png 1600w, images/logo-ibm-png--1920.png 1920w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-6eca273d53a8-273d53a0" alt="" class="brandsimg ibm"><img src="images/SBA_8a_logo.png" srcset="images/SBA_8a_logo-p-500.png 500w, images/SBA_8a_logo-p-800.png 800w, images/SBA_8a_logo.png 1000w" sizes="(max-width: 767px) 100vw, (max-width: 991px) 529.75px, 723.796875px" id="w-node-6eca273d53a9-273d53a0" alt="" class="brandsimg dell"></div>
     </div>
-  </div>
-  <div class="section-13">
-    <div class="w-layout-grid grid-9 w-clearfix"><a id="w-node-db67cafb88b8-cafb88b6" href="#" class="link-7">Privacy Policy</a><a id="w-node-db67cafb88ba-cafb88b6" href="#" class="link-7">Terms of Use</a><a id="w-node-db67cafb88bc-cafb88b6" href="#" class="link-7 last">Contact Us</a>
-      <div id="w-node-db67cafb88be-cafb88b6" class="text-block-7">Stay Connected!</div><a id="w-node-db67cafb88c0-cafb88b6" href="#" class="link fonticon bottom seeme"></a></div>
   </div>
   <div class="footer-bottom">
     <div class="footer-bottom-wrap">
       <div class="legal">Copyright © 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologies</a>. All rights reserved.</div>
     </div>
+    <h1 class="heading-69">Call Us at <strong class="bold-text-7">888.495.7561 </strong>or Have Us Contact You:</h1><a href="contact.html" class="button-6 w-button">LETS TALK</a></div>
+  <div class="csfmainfooter">
+    <div class="w-layout-grid grid-38">
+      <div id="w-node-dd2ccab0848d-cab0848b" class="div-block-67">
+        <h2 class="heading-67">Certifications </h2>
+        <div class="footertext2">Certified Service Disabled Veteran Owned Small Business (SDVOSB)</div>
+        <div class="footertext2">SBA Certified 8(a) Small Busines</div>
+        <div class="footertext2">SBA Certified HUBZone Business</div>
+        <div class="footertext2">Certified Small Business Enterprise New Jersey (SBE)</div>
+        <div class="footertext2">Certified Small Minority Business Enterprise New Jersey (MBE)</div>
+      </div>
+      <div id="w-node-dd2ccab0849a-cab0848b" class="div-block-67">
+        <h2 class="heading-67">About Us</h2>
+        <div class="text-block-17"><span class="text-span-12"></span> (888)-495-7561</div>
+        <div class="text-block-17"><span class="text-span-12"> </span><a href="mailto:info@csftechnologies.com" class="link-10">info@csftechnologies.com</a></div>
+        <div class="text-block-17 adr"><span class="span13"></span> 3251 Progress Drive, Orlando FL 32826</div>
+        <h3 class="heading-68">Stay Connected! <span class="text-span-13"></span></h3>
+      </div>
+      <div id="w-node-dd2ccab084ae-cab0848b" class="div-block-67">
+        <h2 class="heading-67">Solutions</h2>
+        <div class="footertext2">Home<br>Services<br>About<br>Contracts<br>Contact Us</div>
+      </div>
+      <div id="w-node-dd2ccab084af-cab0848b" class="div-block-66"></div>
+      <h4 id="w-node-dd2ccab084b0-cab0848b" class="heading-66">© 2019 <a href="https://jasonnavarro86.github.io/CSF_DEMO_SITE/#footer" class="footer-link">CSF Technologie</a>. All rights reserved.</h4>
+      <div id="w-node-326bd5e350c5-cab0848b" class="div-block-75"><img src="images/logo2.png" alt="" class="image-72"></div>
+    </div>
+  </div>
+  <div class="section-13">
+    <div class="w-layout-grid grid-9 w-clearfix"><a id="w-node-db67cafb88b8-cafb88b6" href="#" class="link-7">Privacy Policy</a><a id="w-node-db67cafb88ba-cafb88b6" href="#" class="link-7">Terms of Use</a><a id="w-node-db67cafb88bc-cafb88b6" href="#" class="link-7 last">Contact Us</a>
+      <div id="w-node-db67cafb88be-cafb88b6" class="text-block-7">Stay Connected!</div><a id="w-node-db67cafb88c0-cafb88b6" href="#" class="link fonticon bottom seeme"></a></div>
   </div>
   <div class="w-embed">
     <style>
